added support for dynamic user sync urls in custom vast